# DesenvolvimentoIntegrado

./: .gitignore  README.md
Dados/Dados Modelo 1/: base_config.txt
Dados/Dados Modelo 2/: base_config.txt
Projeto-Cpp/: .gitignore  CMakeLists.txt
Projeto-Cpp/client/: Makefile  client.cpp
Projeto-Cpp/server/: Makefile  image_utils.cpp  image_utils.hpp  recon.cpp  recon.hpp  server.cpp
Projeto-Python/: Client.py  Main.py  Projeto.py  Server.py
